# pepystats

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  sonar-project.properties
pepystats/: __init__.py  api.py  cli.py
tests/: conftest.py  test_api.py  test_cli.py
